--- a/CursGeometrieAnul1.tex
+++ b/CursGeometrieAnul1.tex
@@ -333,7 +333,24 @@ R\u am\^ane adev\u arat punctul 2) din teorema de mai sus \^{\i}n cazul $char(K)
 \end{exe}
 \begin{center} {\bf Exerci\c tii}
 \end{center}
-
+\begin{exe}
+Fie $K$ un corp comutativ \c si $V$ un $K-$spa\c tiu vectorial. Not\u am cu 
+$\mathbb{A}(V)$ spa\c tiul afin $(V,V,\varphi)$, unde $\varphi$ este structura
+canonic\u  a de spa\c tiu afin pe $V$. C\^ind $V=K^n$ vom nota $\mathbb{A}(V)$
+cu $\mathbb{A}^n(K)$.
+\begin{itemize}
+\item[a)] Determina\c ti toate subspa\c tiile afine ale lui $\mathbb{A}(V)$ atunci 
+c\^ind $V=K^2$ \c si $V=K^3$.
+\item[b)] Fie $P_0,P_1,P_2 \in \mathbb{A}^2(\mathbb{R})$. Ar\u ata\c ti c\u a cele trei puncte s\^int afin dependente dac\u a \c si numai dac\u a s\^int coliniare.
+\end{itemize} 
+\end{exe}
+\begin{exe}
+Fie $K$ un corp de caracteristic\u a $2$ \c si $\mathcal{A}$ un spa\c tiu afin cu
+corpul coeficien\c tilor $K$. Ar\u ata\c ti c\u a $\mathcal{A}' \subset \mathcal{A}$
+este subspa\c tiu afin dac\u a \c si numai dac\u a pentru orice $3$ puncte $P,Q,R \in 
+\mathbb{A}'$ \c si orice $a,b,c \in K$ cu $a+b+c=1$, avem $aP+bQ+cR \in
+\mathcal{A}'$.
+\end{exe}
 \newpage
 
 \section{Subspa\c tii afine}
