--- a/CursGeometrieAnul1.tex
+++ b/CursGeometrieAnul1.tex
@@ -351,6 +351,14 @@ este subspa\c tiu afin dac\u a \c si numai dac\u a pentru orice $3$ puncte $P,Q,
 \mathbb{A}'$ \c si orice $a,b,c \in K$ cu $a+b+c=1$, avem $aP+bQ+cR \in
 \mathcal{A}'$.
 \end{exe}
+\begin{exe}
+Un subspa\c tiu afin de dimensiune $1$ se nume\c ste dreapt\u a. Ar\u at\c ti:
+\begin{itemize}
+\item[a)] Pentru orice dou\u a puncte $A,B \in \mathcal{A}$ exist\u a \c si este
+unic\u a o dreapt\u a care le con\c tine.
+\item[b)] Ar\u ata\c ti c\u a \^in orice spa\c tiu afin exist\u a trei puncte necoliniare.
+\end{itemize}
+\end{exe}
 \newpage
 
 \section{Subspa\c tii afine}
